Trying to fix alignment issuse that are only appearing on the lewdwards614.github.io version

--- a/cssStyles/style.css
+++ b/cssStyles/style.css
@@ -244,8 +244,8 @@ a:hover {
     align-items: center;
     justify-content: flex-start;
     border: 4rem solid black;
-    margin-right: 20rem;
-    margin-left: 20rem;
+    margin-right: 16rem;
+    margin-left: 16rem;
     margin-bottom: 30rem;
     margin-top: 40rem;
 
@@ -286,14 +286,14 @@ a:hover {
         font-size: 38px;
     }
     #hospitalPic{
-        padding-left: 10rem;
+        /* padding-left: 10rem; */
     }
     #petPic{
-        padding-left: 7rem;
+        /* padding-left: 7rem; */
 
     }
     #fortunePic{
-       padding-left:  10rem;
+       /* padding-left:  10rem; */
     }
    
 
